php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47852 [PATCH] Compilation failure in zend_alloc.c
Submitted: 2009-03-31 16:03 UTC Modified: 2009-04-01 16:56 UTC
From: mbeccati@php.net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.3CVS-2009-03-31 (CVS) OS: NetBSD 5
Private report: No CVE-ID: None
 [2009-03-31 16:03 UTC] mbeccati@php.net
Description:
------------
NetBSD 5 introduced mremap() but the signature is different from what we expect.

From man remap:

COMPATIBILITY
     The semantics of mremap() differ from the one provided by glibc on Linux
     in that the newp argument was added and a different set of flags are
     implemented.


A patch is available here: http://www.beccati.com/misc/php/zend_alloc_netbsd.diff

NetBSD 4 compiles without any problem because mremap is not available.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-04-01 16:56 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Committed in 5.2, 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Jul 09 18:00:01 2026 UTC