- MFH: Fixed bug #47852 (Compilation failure in zend_alloc.c) (Matteo)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@278131 c90b9560-bf6c-de11-be94-00142212c4b1